--- a/数据结构/线性表.md
+++ b/数据结构/线性表.md
@@ -196,7 +196,7 @@
 
 > ​	所谓链式存储，就是一个对象**牵着**一个对象，然后形成了一个**链条**，个人觉得链式存储稍微好理解一点，如下图所示
 >
-> <img src="F:\workSpaces\数据结构\code\1.png" height="400">
+> ![1](1.png)
 >
 > ​	
 >
@@ -263,7 +263,7 @@
 > }
 > ```
 >
-> <img src="F:\workSpaces\数据结构\code\2.png" height="400">
+> ![2](code/2.png)
 >
 > ​	可以写一个测试程序：
 >
@@ -283,7 +283,7 @@
 >
 > ​	当插入位置是0，我们需要得到头结点；当插入位置是1，我们需要得到A节点；当插入位置是2，我们需要得到B节点...
 >
-> ![image-20201226115318664](image-20201226115318664.png)
+> 
 >
 > ​	代码实现：
 >
