--- a/elseNote/反射.md
+++ b/elseNote/反射.md
@@ -170,9 +170,13 @@ public class TestClass {
 
 
 
+## 通过反射获取类的全部结构
 
 
-## 通过反射获取类的对象
+
+
+
+### 1、通过反射获取类的对象
 
 
 
@@ -181,3 +185,356 @@ public class TestClass {
 * 类必须要有一个无参数的构造器
 * 类的构造器的访问权限需要足够
 
+```java
+ @Test
+    public void test4() throws Exception {
+
+        Class<Person> clazz = Person.class;
+        Person person = clazz.newInstance();
+        System.out.println(person);
+    }
+```
+
+
+
+
+
+### 2、通过反射获取类的属性
+
+
+
+​		通过Class对象的getField(String  name )方法可以获取当前运行时类的public修饰的属性，通过Class 对象的getFields()方法可以获取当前运行时类的及其父类的public修饰的属性；通过Class对象的getDeclaredFields()方法可以获取当前运行时类的所有属性
+
+```java
+@Test
+    public void test1() throws Exception {
+
+        Class<?> clazz = Class.forName("com.dajiao.ClassFiled.Person");
+        Field name = clazz.getField("name");
+        System.out.println(name);
+
+        System.out.println("获取运行时类及其父类的public修饰的全部属性1");
+        //只能获取当前运行时类及其父类的public权限的属性
+        Field[] fields = clazz.getFields();
+        for (Field field : fields) {
+            System.out.println(field);
+        }
+
+        System.out.println("获取当前运行时类的全部属性2");
+        //获取当前运行时类的所有属性
+        Field[] declaredFields = clazz.getDeclaredFields();
+        for (Field declaredField : declaredFields) {
+            System.out.println(declaredField);
+        }
+    }
+运行结果：
+    public java.lang.String com.dajiao.ClassFiled.Person.name
+    获取运行时类及其父类的public修饰的全部属性1
+    public java.lang.String com.dajiao.ClassFiled.Person.name
+    public java.lang.String com.dajiao.ClassFiled.Life.stage
+    获取当前运行时类的全部属性2
+    public java.lang.String com.dajiao.ClassFiled.Person.name
+    private int com.dajiao.ClassFiled.Person.age
+```
+
+
+
+​		根据获取的每个属性可以单独的获取属性的权限修饰符，数据类型，属性名
+
+```java
+@Test
+    public void test2(){
+
+        Class<Person> clazz = Person.class;
+        Field[] declaredFields = clazz.getDeclaredFields();
+        for (Field declaredField : declaredFields) {
+
+            //获取属性名
+            System.out.print("属性名->");
+            System.out.print(declaredField.getName() + "  ");
+            //获取属性的权限修饰符
+            System.out.print("权限修饰符->");
+            int modifiers = declaredField.getModifiers();
+            System.out.print(Modifier.toString(modifiers) +"  ");
+            //获取数据类型
+            System.out.print("数据类型->");
+            Class<?> type = declaredField.getType();
+            System.out.println(type);
+        }
+    }
+运行结果：
+    属性名->name  权限修饰符->public  数据类型->class java.lang.String
+    属性名->age  权限修饰符->private  数据类型->int
+```
+
+
+
+### 3、反射设置类的属性
+
+、
+
+​		利用getField(String name)方法获取public权限修饰的属性，返回一个Field类，调用该类的set(Object 对象, Object 属性值)方法，但需要调用newInstance()方法获取运行类的对象，但此方式只能改变public属性值，不推荐使用
+
+​		利用getDeclaredField(String name)获取运行是类的所有属性值，先设置属性可访问，setAccessible(boolean b)为true，在调用set()方法设置属性值
+
+```java
+//了解
+@Test
+    public void test3() throws Exception {
+
+        Class<Person> clazz = Person.class;
+        //获取对象
+        Person person = clazz.newInstance();
+        Field name = clazz.getField("name");
+        //只能访问public属性
+//        Field age = clazz.getField("age");
+
+        //设置name的属性
+        name.set(person, "alan");
+        System.out.println(person);
+    }
+
+//掌握
+    @Test
+    public void test4() throws Exception {
+
+        Class<Person> clazz = Person.class;
+        //获取对象
+        Person person = clazz.newInstance();
+        Field age = clazz.getDeclaredField("age");
+        Field name = clazz.getDeclaredField("name");
+        //将属性设置为可访问
+        age.setAccessible(true);
+        name.set(person, "alan");
+        age.set(person, 10);
+        System.out.println(person);
+    }
+```
+
+
+
+### 4、通过反射获取类的方法
+
+
+
+​		可以通过Class类的getMethods()方法获取运行类及其所有父类的public修饰的方法
+
+​		可以通过Class类的getDeclaredMethods()方法获取运行时类的所有方法
+
+```java
+@Test
+    public void test1() {
+
+        Class<Person> clazz = Person.class;
+        //获取运行时类的及其所有父类的public修饰的方法
+        Method[] methods = clazz.getMethods();
+        for (Method method : methods) {
+            System.out.println(method);
+        }
+        System.out.println("````````````");
+        //获取该运行时类的所有方法
+        Method[] declaredMethods = clazz.getDeclaredMethods();
+        for (Method declaredMethod : declaredMethods) {
+            System.out.println(declaredMethod);
+        }
+    }
+```
+
+​		
+
+​		获取了method方法类之后就可以对方法的注解、权限、返回值、方法名、参数、抛出的异常进行获取
+
+```java
+@Test
+    public void test3() {
+
+        Class<Person> clazz = Person.class;
+        //获取该运行时类的所有方法
+        Method[] declaredMethods = clazz.getDeclaredMethods();
+        for (Method declaredMethod : declaredMethods) {
+            System.out.print("方法名->");
+            System.out.print(declaredMethod.getName() + "  ");
+
+            //获取注解
+            System.out.print("注解->");
+            Annotation[] annotations = declaredMethod.getAnnotations();
+            for (Annotation annotation : annotations) {
+                System.out.print(annotation + " ");
+            }
+
+            System.out.print("权限->");
+            System.out.print(Modifier.toString(declaredMethod.getModifiers())+ " ");
+
+            //获取返回类型
+            System.out.print("返回类型->");
+            System.out.print(declaredMethod.getReturnType().getName()+ " ");
+
+            //获取形参
+            System.out.print("形参->");
+            Class<?>[] parameterTypes = declaredMethod.getParameterTypes();
+            for (Class<?> parameterType : parameterTypes) {
+                System.out.print(parameterType.getName()+ " ");
+            }
+
+            //获取抛出的异常
+            Class<?>[] exceptionTypes = declaredMethod.getExceptionTypes();
+            for (Class<?> exceptionType : exceptionTypes) {
+                System.out.print("异常->");
+                System.out.print(exceptionType + " ");
+            }
+            System.out.println();
+        }
+    }
+```
+
+
+
+### 5、反射调用类的方法
+
+
+
+​		首先可以获取具体的某一个方法
+
+* getMethod(String 方法名, 方法所有参数类型)，只能获取public权限的方法，不推荐
+* getDeclaredMethod(String 方法名, 方法所有番参数类型)，可以获取所有方法，推荐
+* newInstance()获取运行时类的对象
+* 设置方法可访问，方法对象.setAccessible(true)
+* 调用方法，方法对象.invoke(运行时类的对象，方法参数)
+
+```java
+@Test
+    public void test5() throws Exception {
+        
+        Class<Person> clazz = Person.class;
+        Person person = clazz.newInstance();
+
+        //调用public修饰的方法，不推荐
+        Method test = clazz.getMethod("test");
+        test.invoke(person);
+
+        //调用运行类的任何一个方法
+        Method print = clazz.getDeclaredMethod("print", String.class);
+        System.out.println(print);
+        //设置权限为可访问
+        print.setAccessible(true);
+        //调用方法
+        print.invoke(person,(String)"男");
+    }
+```
+
+
+
+
+
+
+
+### 6、通过反射获取类的构造器
+
+
+
+​		同理，调用Class类的getConstructor()获取改类的构造器
+
+```java
+@Test
+    public void test4() {
+
+        Class<Person> personClass = Person.class;
+        //获取当前类的所有public权限的构造器
+        Constructor<?>[] constructors = personClass.getConstructors();
+        for (Constructor<?> constructor : constructors) {
+            System.out.println(constructor);
+        }
+
+        System.out.println(        );
+        //获取当前运行时类的所有构造器
+        Constructor<?>[] declaredConstructors = personClass.getDeclaredConstructors();
+        for (Constructor<?> declaredConstructor : declaredConstructors) {
+            System.out.println(declaredConstructor);
+        }
+    }
+```
+
+
+
+ 也可以根据获取的构造器类获取构造器的权限、注解之类的属性...
+
+
+
+### 7、反射调用构造器
+
+
+
+```java
+@Test
+    public void test6() throws Exception {
+
+        Class<Person> personClass = Person.class;
+        //获取public修饰的构造器
+        Constructor<Person> constructor = personClass.getConstructor(int.class);
+        Person person1 = constructor.newInstance(12);
+        System.out.println(person1);
+
+        //获取任何权限的构造器
+        Constructor<Person> declaredConstructor = personClass.getDeclaredConstructor(String.class, int.class);
+        Person alan = declaredConstructor.newInstance("alan", 12);
+        System.out.println(alan);
+    }
+```
+
+
+
+### 获取运行时类的父类及父类的泛型
+
+
+
+```java
+ @Test
+    public void test() {
+
+        Class<Person> clazz = Person.class;
+        //获取父类
+        Class<? super Person> superclass = clazz.getSuperclass();
+        System.out.println(superclass);
+        
+        //获取待泛型的父类
+        Type genericSuperclass1 = clazz.getGenericSuperclass();
+        System.out.println(genericSuperclass1);
+        //获取带泛型的父类的泛型
+        ParameterizedType paramType = (ParameterizedType) genericSuperclass1;
+        Type[] actualTypeArguments = paramType.getActualTypeArguments();
+        System.out.println(actualTypeArguments[0].getTypeName());
+    }
+```
+
+
+
+​		
+
+## 获取类的注解、接口、所在包
+
+
+
+```java
+@Test
+        public void test() {
+
+            //获取注解，但注解状态必须设置为run...
+            Class<Person> personClass = Person.class;
+            Annotation[] annotations = personClass.getAnnotations();
+            for (Annotation annotation : annotations) {
+                System.out.println(annotation);
+            }
+
+            //获取接口
+            Class<?>[] interfaces = personClass.getInterfaces();
+            System.out.println(Arrays.toString(interfaces));
+
+            //获取包
+            Package aPackage = personClass.getPackage();
+            System.out.println(aPackage);
+    }
+```
+
+
+
+### 
